# key_points_planner

./: CMakeLists.txt  README.md  key_points_planner_plugin.xml  package.xml
include/: key_points_planner.hpp
src/: key_points_planner_node.cpp  key_points_planner_plugin.cpp
